--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>정진우 포트폴리오</title>
-    <link rel="stylesheet" href="/0910/portfolio/css/main.css?after"/>
+    <link rel="stylesheet" href="/portfolio/css/main.css">
     <script src="https://kit.fontawesome.com/e6878eda47.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -40,7 +40,7 @@
                     </article>
                 </section>
                 <div class="myinfo">
-                    <img src="/0910/portfolio/images/profile.jpg" alt="프로필 사진" class="profileimg">
+                    <img src="/portfolio/images/profile.jpg" alt="프로필 사진" class="profileimg">
                     <div>
                         <table>
                             <tr>
